Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence_groups
Rule 2     sentence_groups -> EOS OPBR EOS sentence_group CLBR EOS
Rule 3     sentence_groups -> OPBR EOS sentence_group CLBR EOS
Rule 4     sentence_groups -> OPBR EOS sentence_group CLBR
Rule 5     sentence_groups -> EOS OPBR EOS sentence_group CLBR
Rule 6     sentence_groups -> sentence
Rule 7     sentence_group -> sentence_group sentence
Rule 8     sentence_group -> sentence
Rule 9     sentence -> definition EOS
Rule 10    sentence -> if
Rule 11    sentence -> while
Rule 12    sentence -> if_err
Rule 13    sentence -> while_err
Rule 14    sentence -> procedure
Rule 15    sentence -> call_procedure EOS
Rule 16    sentence -> robot_command EOS
Rule 17    sentence -> map_setting EOS
Rule 18    sentence -> error
Rule 19    definition -> INT VARIABLE EQUAL math_expr
Rule 20    definition -> CINT VARIABLE EQUAL math_expr
Rule 21    definition -> BOOLEAN VARIABLE EQUAL logic_expr
Rule 22    definition -> CBOOLEAN VARIABLE EQUAL logic_expr
Rule 23    definition -> VARIABLE ASSIGN math_expr
Rule 24    definition -> VARIABLE ASSIGN logic_expr
Rule 25    definition -> MAP VARIABLE
Rule 26    math_expr -> INC math_first math_second
Rule 27    math_expr -> DEC math_first math_second
Rule 28    math_expr -> math_cmd empty
Rule 29    math_expr -> VARIABLE
Rule 30    math_expr -> number empty
Rule 31    number -> NUM
Rule 32    bool -> TRUE
Rule 33    bool -> FALSE
Rule 34    math_first -> math_expr
Rule 35    math_first -> call_procedure
Rule 36    math_second -> math_first
Rule 37    math_second -> logic_expr
Rule 38    logic_expr -> NOT logic_expr
Rule 39    logic_expr -> NOT call_procedure
Rule 40    logic_expr -> OR or_elem or_elem
Rule 41    logic_expr -> GT math_expr math_expr
Rule 42    logic_expr -> LT math_expr math_expr
Rule 43    logic_expr -> logic_cmd
Rule 44    logic_expr -> bool
Rule 45    or_elem -> logic_expr
Rule 46    or_elem -> call_procedure
Rule 47    procedure -> PROC VARIABLE OPSQBR varlist CLSQBR sentence_groups
Rule 48    call_procedure -> VARIABLE OPSQBR varlist CLSQBR
Rule 49    varlist -> varlist VARIABLE
Rule 50    varlist -> VARIABLE
Rule 51    if_err -> IF error sentence_groups ELSE sentence_groups
Rule 52    if_err -> IF error sentence_groups
Rule 53    while_err -> WHILE error DO sentence_groups
Rule 54    while_err -> WHILE error
Rule 55    if -> IF logic_expr sentence_groups ELSE sentence_groups
Rule 56    if -> IF logic_expr sentence_groups
Rule 57    while -> WHILE logic_expr DO sentence_groups
Rule 58    robot_command -> logic_cmd
Rule 59    robot_command -> rot_dir
Rule 60    robot_command -> math_cmd
Rule 61    rot_dir -> BACK
Rule 62    rot_dir -> RIGHT
Rule 63    rot_dir -> LEFT
Rule 64    logic_cmd -> STEP
Rule 65    math_cmd -> LOOK
Rule 66    map_setting -> BAR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 67    map_setting -> EMP OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 68    map_setting -> SET OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 69    map_setting -> CLR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 70    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 23 24
BACK                 : 61
BAR                  : 66
BOOLEAN              : 21
CBOOLEAN             : 22
CINT                 : 20
CLBR                 : 2 3 4 5
CLR                  : 69
CLSQBR               : 47 48 66 67 68 69
DEC                  : 27
DO                   : 53 57
ELSE                 : 51 55
EMP                  : 67
EOS                  : 2 2 2 3 3 4 5 5 9 15 16 17
EQUAL                : 19 20 21 22
FALSE                : 33
GT                   : 41
IF                   : 51 52 55 56
INC                  : 26
INT                  : 19
LEFT                 : 63
LOOK                 : 65
LT                   : 42
MAP                  : 25
NOT                  : 38 39
NUM                  : 31
OPBR                 : 2 3 4 5
OPSQBR               : 47 48 66 67 68 69
OR                   : 40
PROC                 : 47
RIGHT                : 62
SET                  : 68
STEP                 : 64
TRUE                 : 32
VARIABLE             : 19 20 21 22 23 24 25 29 47 48 49 50 66 66 67 67 68 68 69 69
WHILE                : 53 54 57
error                : 18 51 52 53 54

Nonterminals, with rules where they appear

bool                 : 44
call_procedure       : 15 35 39 46
definition           : 9
empty                : 28 30
if                   : 10
if_err               : 12
logic_cmd            : 43 58
logic_expr           : 21 22 24 37 38 45 55 56 57
map_setting          : 17
math_cmd             : 28 60
math_expr            : 19 20 23 34 41 41 42 42 66 66 67 67 68 68 69 69
math_first           : 26 27 36
math_second          : 26 27
number               : 30
or_elem              : 40 40
procedure            : 14
program              : 0
robot_command        : 16
rot_dir              : 59
sentence             : 6 7 8
sentence_group       : 2 3 4 5 7
sentence_groups      : 1 47 51 51 52 53 55 55 56 57
varlist              : 47 48 49
while                : 11
while_err            : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence_groups
    (2) sentence_groups -> . EOS OPBR EOS sentence_group CLBR EOS
    (3) sentence_groups -> . OPBR EOS sentence_group CLBR EOS
    (4) sentence_groups -> . OPBR EOS sentence_group CLBR
    (5) sentence_groups -> . EOS OPBR EOS sentence_group CLBR
    (6) sentence_groups -> . sentence
    (9) sentence -> . definition EOS
    (10) sentence -> . if
    (11) sentence -> . while
    (12) sentence -> . if_err
    (13) sentence -> . while_err
    (14) sentence -> . procedure
    (15) sentence -> . call_procedure EOS
    (16) sentence -> . robot_command EOS
    (17) sentence -> . map_setting EOS
    (18) sentence -> . error
    (19) definition -> . INT VARIABLE EQUAL math_expr
    (20) definition -> . CINT VARIABLE EQUAL math_expr
    (21) definition -> . BOOLEAN VARIABLE EQUAL logic_expr
    (22) definition -> . CBOOLEAN VARIABLE EQUAL logic_expr
    (23) definition -> . VARIABLE ASSIGN math_expr
    (24) definition -> . VARIABLE ASSIGN logic_expr
    (25) definition -> . MAP VARIABLE
    (55) if -> . IF logic_expr sentence_groups ELSE sentence_groups
    (56) if -> . IF logic_expr sentence_groups
    (57) while -> . WHILE logic_expr DO sentence_groups
    (51) if_err -> . IF error sentence_groups ELSE sentence_groups
    (52) if_err -> . IF error sentence_groups
    (53) while_err -> . WHILE error DO sentence_groups
    (54) while_err -> . WHILE error
    (47) procedure -> . PROC VARIABLE OPSQBR varlist CLSQBR sentence_groups
    (48) call_procedure -> . VARIABLE OPSQBR varlist CLSQBR
    (58) robot_command -> . logic_cmd
    (59) robot_command -> . rot_dir
    (60) robot_command -> . math_cmd
    (66) map_setting -> . BAR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (67) map_setting -> . EMP OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (68) map_setting -> . SET OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (69) map_setting -> . CLR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (64) logic_cmd -> . STEP
    (61) rot_dir -> . BACK
    (62) rot_dir -> . RIGHT
    (63) rot_dir -> . LEFT
    (65) math_cmd -> . LOOK

    EOS             shift and go to state 3
    OPBR            shift and go to state 4
    error           shift and go to state 15
    INT             shift and go to state 16
    CINT            shift and go to state 18
    BOOLEAN         shift and go to state 19
    CBOOLEAN        shift and go to state 20
    VARIABLE        shift and go to state 17
    MAP             shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    PROC            shift and go to state 24
    BAR             shift and go to state 28
    EMP             shift and go to state 29
    SET             shift and go to state 30
    CLR             shift and go to state 31
    STEP            shift and go to state 32
    BACK            shift and go to state 33
    RIGHT           shift and go to state 34
    LEFT            shift and go to state 35
    LOOK            shift and go to state 36

    program                        shift and go to state 1
    sentence_groups                shift and go to state 2
    sentence                       shift and go to state 5
    definition                     shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    if_err                         shift and go to state 9
    while_err                      shift and go to state 10
    procedure                      shift and go to state 11
    call_procedure                 shift and go to state 12
    robot_command                  shift and go to state 13
    map_setting                    shift and go to state 14
    logic_cmd                      shift and go to state 25
    rot_dir                        shift and go to state 26
    math_cmd                       shift and go to state 27

state 1

    (0) S' -> program .



state 2

    (1) program -> sentence_groups .

    $end            reduce using rule 1 (program -> sentence_groups .)


state 3

    (2) sentence_groups -> EOS . OPBR EOS sentence_group CLBR EOS
    (5) sentence_groups -> EOS . OPBR EOS sentence_group CLBR

    OPBR            shift and go to state 37


state 4

    (3) sentence_groups -> OPBR . EOS sentence_group CLBR EOS
    (4) sentence_groups -> OPBR . EOS sentence_group CLBR

    EOS             shift and go to state 38


state 5

    (6) sentence_groups -> sentence .

    $end            reduce using rule 6 (sentence_groups -> sentence .)
    ELSE            reduce using rule 6 (sentence_groups -> sentence .)
    CLBR            reduce using rule 6 (sentence_groups -> sentence .)
    error           reduce using rule 6 (sentence_groups -> sentence .)
    INT             reduce using rule 6 (sentence_groups -> sentence .)
    CINT            reduce using rule 6 (sentence_groups -> sentence .)
    BOOLEAN         reduce using rule 6 (sentence_groups -> sentence .)
    CBOOLEAN        reduce using rule 6 (sentence_groups -> sentence .)
    VARIABLE        reduce using rule 6 (sentence_groups -> sentence .)
    MAP             reduce using rule 6 (sentence_groups -> sentence .)
    IF              reduce using rule 6 (sentence_groups -> sentence .)
    WHILE           reduce using rule 6 (sentence_groups -> sentence .)
    PROC            reduce using rule 6 (sentence_groups -> sentence .)
    BAR             reduce using rule 6 (sentence_groups -> sentence .)
    EMP             reduce using rule 6 (sentence_groups -> sentence .)
    SET             reduce using rule 6 (sentence_groups -> sentence .)
    CLR             reduce using rule 6 (sentence_groups -> sentence .)
    STEP            reduce using rule 6 (sentence_groups -> sentence .)
    BACK            reduce using rule 6 (sentence_groups -> sentence .)
    RIGHT           reduce using rule 6 (sentence_groups -> sentence .)
    LEFT            reduce using rule 6 (sentence_groups -> sentence .)
    LOOK            reduce using rule 6 (sentence_groups -> sentence .)


state 6

    (9) sentence -> definition . EOS

    EOS             shift and go to state 39


state 7

    (10) sentence -> if .

    $end            reduce using rule 10 (sentence -> if .)
    CLBR            reduce using rule 10 (sentence -> if .)
    error           reduce using rule 10 (sentence -> if .)
    INT             reduce using rule 10 (sentence -> if .)
    CINT            reduce using rule 10 (sentence -> if .)
    BOOLEAN         reduce using rule 10 (sentence -> if .)
    CBOOLEAN        reduce using rule 10 (sentence -> if .)
    VARIABLE        reduce using rule 10 (sentence -> if .)
    MAP             reduce using rule 10 (sentence -> if .)
    IF              reduce using rule 10 (sentence -> if .)
    WHILE           reduce using rule 10 (sentence -> if .)
    PROC            reduce using rule 10 (sentence -> if .)
    BAR             reduce using rule 10 (sentence -> if .)
    EMP             reduce using rule 10 (sentence -> if .)
    SET             reduce using rule 10 (sentence -> if .)
    CLR             reduce using rule 10 (sentence -> if .)
    STEP            reduce using rule 10 (sentence -> if .)
    BACK            reduce using rule 10 (sentence -> if .)
    RIGHT           reduce using rule 10 (sentence -> if .)
    LEFT            reduce using rule 10 (sentence -> if .)
    LOOK            reduce using rule 10 (sentence -> if .)
    ELSE            reduce using rule 10 (sentence -> if .)


state 8

    (11) sentence -> while .

    $end            reduce using rule 11 (sentence -> while .)
    CLBR            reduce using rule 11 (sentence -> while .)
    error           reduce using rule 11 (sentence -> while .)
    INT             reduce using rule 11 (sentence -> while .)
    CINT            reduce using rule 11 (sentence -> while .)
    BOOLEAN         reduce using rule 11 (sentence -> while .)
    CBOOLEAN        reduce using rule 11 (sentence -> while .)
    VARIABLE        reduce using rule 11 (sentence -> while .)
    MAP             reduce using rule 11 (sentence -> while .)
    IF              reduce using rule 11 (sentence -> while .)
    WHILE           reduce using rule 11 (sentence -> while .)
    PROC            reduce using rule 11 (sentence -> while .)
    BAR             reduce using rule 11 (sentence -> while .)
    EMP             reduce using rule 11 (sentence -> while .)
    SET             reduce using rule 11 (sentence -> while .)
    CLR             reduce using rule 11 (sentence -> while .)
    STEP            reduce using rule 11 (sentence -> while .)
    BACK            reduce using rule 11 (sentence -> while .)
    RIGHT           reduce using rule 11 (sentence -> while .)
    LEFT            reduce using rule 11 (sentence -> while .)
    LOOK            reduce using rule 11 (sentence -> while .)
    ELSE            reduce using rule 11 (sentence -> while .)


state 9

    (12) sentence -> if_err .

    $end            reduce using rule 12 (sentence -> if_err .)
    CLBR            reduce using rule 12 (sentence -> if_err .)
    error           reduce using rule 12 (sentence -> if_err .)
    INT             reduce using rule 12 (sentence -> if_err .)
    CINT            reduce using rule 12 (sentence -> if_err .)
    BOOLEAN         reduce using rule 12 (sentence -> if_err .)
    CBOOLEAN        reduce using rule 12 (sentence -> if_err .)
    VARIABLE        reduce using rule 12 (sentence -> if_err .)
    MAP             reduce using rule 12 (sentence -> if_err .)
    IF              reduce using rule 12 (sentence -> if_err .)
    WHILE           reduce using rule 12 (sentence -> if_err .)
    PROC            reduce using rule 12 (sentence -> if_err .)
    BAR             reduce using rule 12 (sentence -> if_err .)
    EMP             reduce using rule 12 (sentence -> if_err .)
    SET             reduce using rule 12 (sentence -> if_err .)
    CLR             reduce using rule 12 (sentence -> if_err .)
    STEP            reduce using rule 12 (sentence -> if_err .)
    BACK            reduce using rule 12 (sentence -> if_err .)
    RIGHT           reduce using rule 12 (sentence -> if_err .)
    LEFT            reduce using rule 12 (sentence -> if_err .)
    LOOK            reduce using rule 12 (sentence -> if_err .)
    ELSE            reduce using rule 12 (sentence -> if_err .)


state 10

    (13) sentence -> while_err .

    $end            reduce using rule 13 (sentence -> while_err .)
    CLBR            reduce using rule 13 (sentence -> while_err .)
    error           reduce using rule 13 (sentence -> while_err .)
    INT             reduce using rule 13 (sentence -> while_err .)
    CINT            reduce using rule 13 (sentence -> while_err .)
    BOOLEAN         reduce using rule 13 (sentence -> while_err .)
    CBOOLEAN        reduce using rule 13 (sentence -> while_err .)
    VARIABLE        reduce using rule 13 (sentence -> while_err .)
    MAP             reduce using rule 13 (sentence -> while_err .)
    IF              reduce using rule 13 (sentence -> while_err .)
    WHILE           reduce using rule 13 (sentence -> while_err .)
    PROC            reduce using rule 13 (sentence -> while_err .)
    BAR             reduce using rule 13 (sentence -> while_err .)
    EMP             reduce using rule 13 (sentence -> while_err .)
    SET             reduce using rule 13 (sentence -> while_err .)
    CLR             reduce using rule 13 (sentence -> while_err .)
    STEP            reduce using rule 13 (sentence -> while_err .)
    BACK            reduce using rule 13 (sentence -> while_err .)
    RIGHT           reduce using rule 13 (sentence -> while_err .)
    LEFT            reduce using rule 13 (sentence -> while_err .)
    LOOK            reduce using rule 13 (sentence -> while_err .)
    ELSE            reduce using rule 13 (sentence -> while_err .)


state 11

    (14) sentence -> procedure .

    $end            reduce using rule 14 (sentence -> procedure .)
    CLBR            reduce using rule 14 (sentence -> procedure .)
    error           reduce using rule 14 (sentence -> procedure .)
    INT             reduce using rule 14 (sentence -> procedure .)
    CINT            reduce using rule 14 (sentence -> procedure .)
    BOOLEAN         reduce using rule 14 (sentence -> procedure .)
    CBOOLEAN        reduce using rule 14 (sentence -> procedure .)
    VARIABLE        reduce using rule 14 (sentence -> procedure .)
    MAP             reduce using rule 14 (sentence -> procedure .)
    IF              reduce using rule 14 (sentence -> procedure .)
    WHILE           reduce using rule 14 (sentence -> procedure .)
    PROC            reduce using rule 14 (sentence -> procedure .)
    BAR             reduce using rule 14 (sentence -> procedure .)
    EMP             reduce using rule 14 (sentence -> procedure .)
    SET             reduce using rule 14 (sentence -> procedure .)
    CLR             reduce using rule 14 (sentence -> procedure .)
    STEP            reduce using rule 14 (sentence -> procedure .)
    BACK            reduce using rule 14 (sentence -> procedure .)
    RIGHT           reduce using rule 14 (sentence -> procedure .)
    LEFT            reduce using rule 14 (sentence -> procedure .)
    LOOK            reduce using rule 14 (sentence -> procedure .)
    ELSE            reduce using rule 14 (sentence -> procedure .)


state 12

    (15) sentence -> call_procedure . EOS

    EOS             shift and go to state 40


state 13

    (16) sentence -> robot_command . EOS

    EOS             shift and go to state 41


state 14

    (17) sentence -> map_setting . EOS

    EOS             shift and go to state 42


state 15

    (18) sentence -> error .

    $end            reduce using rule 18 (sentence -> error .)
    CLBR            reduce using rule 18 (sentence -> error .)
    error           reduce using rule 18 (sentence -> error .)
    INT             reduce using rule 18 (sentence -> error .)
    CINT            reduce using rule 18 (sentence -> error .)
    BOOLEAN         reduce using rule 18 (sentence -> error .)
    CBOOLEAN        reduce using rule 18 (sentence -> error .)
    VARIABLE        reduce using rule 18 (sentence -> error .)
    MAP             reduce using rule 18 (sentence -> error .)
    IF              reduce using rule 18 (sentence -> error .)
    WHILE           reduce using rule 18 (sentence -> error .)
    PROC            reduce using rule 18 (sentence -> error .)
    BAR             reduce using rule 18 (sentence -> error .)
    EMP             reduce using rule 18 (sentence -> error .)
    SET             reduce using rule 18 (sentence -> error .)
    CLR             reduce using rule 18 (sentence -> error .)
    STEP            reduce using rule 18 (sentence -> error .)
    BACK            reduce using rule 18 (sentence -> error .)
    RIGHT           reduce using rule 18 (sentence -> error .)
    LEFT            reduce using rule 18 (sentence -> error .)
    LOOK            reduce using rule 18 (sentence -> error .)
    ELSE            reduce using rule 18 (sentence -> error .)


state 16

    (19) definition -> INT . VARIABLE EQUAL math_expr

    VARIABLE        shift and go to state 43


state 17

    (23) definition -> VARIABLE . ASSIGN math_expr
    (24) definition -> VARIABLE . ASSIGN logic_expr
    (48) call_procedure -> VARIABLE . OPSQBR varlist CLSQBR

    ASSIGN          shift and go to state 44
    OPSQBR          shift and go to state 45


state 18

    (20) definition -> CINT . VARIABLE EQUAL math_expr

    VARIABLE        shift and go to state 46


state 19

    (21) definition -> BOOLEAN . VARIABLE EQUAL logic_expr

    VARIABLE        shift and go to state 47


state 20

    (22) definition -> CBOOLEAN . VARIABLE EQUAL logic_expr

    VARIABLE        shift and go to state 48


state 21

    (25) definition -> MAP . VARIABLE

    VARIABLE        shift and go to state 49


state 22

    (55) if -> IF . logic_expr sentence_groups ELSE sentence_groups
    (56) if -> IF . logic_expr sentence_groups
    (51) if_err -> IF . error sentence_groups ELSE sentence_groups
    (52) if_err -> IF . error sentence_groups
    (38) logic_expr -> . NOT logic_expr
    (39) logic_expr -> . NOT call_procedure
    (40) logic_expr -> . OR or_elem or_elem
    (41) logic_expr -> . GT math_expr math_expr
    (42) logic_expr -> . LT math_expr math_expr
    (43) logic_expr -> . logic_cmd
    (44) logic_expr -> . bool
    (64) logic_cmd -> . STEP
    (32) bool -> . TRUE
    (33) bool -> . FALSE

    error           shift and go to state 51
    NOT             shift and go to state 52
    OR              shift and go to state 53
    GT              shift and go to state 54
    LT              shift and go to state 55
    STEP            shift and go to state 32
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    logic_expr                     shift and go to state 50
    logic_cmd                      shift and go to state 56
    bool                           shift and go to state 57

state 23

    (57) while -> WHILE . logic_expr DO sentence_groups
    (53) while_err -> WHILE . error DO sentence_groups
    (54) while_err -> WHILE . error
    (38) logic_expr -> . NOT logic_expr
    (39) logic_expr -> . NOT call_procedure
    (40) logic_expr -> . OR or_elem or_elem
    (41) logic_expr -> . GT math_expr math_expr
    (42) logic_expr -> . LT math_expr math_expr
    (43) logic_expr -> . logic_cmd
    (44) logic_expr -> . bool
    (64) logic_cmd -> . STEP
    (32) bool -> . TRUE
    (33) bool -> . FALSE

    error           shift and go to state 61
    NOT             shift and go to state 52
    OR              shift and go to state 53
    GT              shift and go to state 54
    LT              shift and go to state 55
    STEP            shift and go to state 32
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    logic_expr                     shift and go to state 60
    logic_cmd                      shift and go to state 56
    bool                           shift and go to state 57

state 24

    (47) procedure -> PROC . VARIABLE OPSQBR varlist CLSQBR sentence_groups

    VARIABLE        shift and go to state 62


state 25

    (58) robot_command -> logic_cmd .

    EOS             reduce using rule 58 (robot_command -> logic_cmd .)


state 26

    (59) robot_command -> rot_dir .

    EOS             reduce using rule 59 (robot_command -> rot_dir .)


state 27

    (60) robot_command -> math_cmd .

    EOS             reduce using rule 60 (robot_command -> math_cmd .)


state 28

    (66) map_setting -> BAR . OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR

    OPSQBR          shift and go to state 63


state 29

    (67) map_setting -> EMP . OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR

    OPSQBR          shift and go to state 64


state 30

    (68) map_setting -> SET . OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR

    OPSQBR          shift and go to state 65


state 31

    (69) map_setting -> CLR . OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR

    OPSQBR          shift and go to state 66


state 32

    (64) logic_cmd -> STEP .
